Game calculator - big refactor, modifier